# rest-api-wl-shared

./: Cargo.toml
src/: api_result_status.rs  configure_rest_api_server.rs  lib.rs
src/brand_resolver/: brands_no_sql_entity.rs  mod.rs  resolve_brand.rs
src/get_client_id/: get_client_id.rs
src/http_fields/: country_code_field.rs  mod.rs  password_field.rs
src/middlewares/: auth_error_factory.rs  auth_failed.rs  auth_middleware.rs  get_session_token.rs  mod.rs  request_creds.rs  session_entity.rs
src/my_no_sql/: mod.rs  session_entity.rs
