[package]
name = "rest-api-wl-shared"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.6.0", git = "https://github.com/MyJetTools/my-http-server", features = [
    "controllers",
    "macros",
] }

my-telemetry = { tag = "1.0.1", git = "https://github.com/MyJetTools/my-telemetry.git", features = [
    "my_telemetry_writer",
] }

my-no-sql = { git = "https://github.com/MyJetTools/my-no-sql.git", tag = "0.1.1", features = [
    "macros",
    "reader",
] }

rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }

serde = { version = "*", features = ["derive"] }
serde_repr = "*"
serde_json = "*"

async-trait = "*"
